Modify navigation border and add logout button

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="fav_icon.ico" rel="shortcut icon" type="image/x-icon" />
 
-		<title>OIPULES control panel</title>
+		<title>OPILUS control panel</title>
 
 		<!-- load css -->
 		<link rel="stylesheet" media="all" type="text/css" href="css/bootstrap.css" />
 		<link rel="stylesheet" media="all" type="text/css" href="css/reset.css" />
 		<link rel="stylesheet" media="all" type="text/css" href="css/style.css" />
+
+        <!-- load fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
@@ -27,7 +30,7 @@
 
 				<div id="tool_bar">
 					<p class="title">
-						CompuTech Admin Panel
+						Opilus Admin Panel
 					</p>
 
 
@@ -35,6 +38,7 @@
 						<li><a href="#">Help Support</a></li>
 						<li><a href="#">Settings</a></li>
 						<li class="active"><img src="images/user.jpg"/><a href="#">Mohanad Kaleia</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-off"></i></a></li>
 					</ul>
 				</div>
 			</header>
@@ -44,12 +48,12 @@
 			<div id="main" class="row">
 				<nav class="col-md-3">
 					<ul>
-						<li class="active red"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class="light-blue"><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a></li>
-						<li class="green"><a href="#"><i class="glyphicon glyphicon-book"></i>Blog</a></li>
-						<li class="yellow"><a href="#"><i class="glyphicon glyphicon-picture"></i>Pages</a></li>
-						<li class="orange"><a href="#"><i class="glyphicon glyphicon-glass"></i>Posts</a></li>
-						<li class="violete"><a href="#"><i class="glyphicon glyphicon-user"></i>Users</a></li>
+						<li class="active"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Blog</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-picture"></i>Pages</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-glass"></i>Posts</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-user"></i>Users</a></li>
 					</ul>
 				</nav>
 
@@ -58,13 +62,6 @@
 					<!-- title panel -->
 					<div id="title_panel" class="row">
 						<h3 class="col-md-5">Club Activity</h3>
-
-						<!-- breacrumb -->
-						<ul class="breadcrumb col-md-7">
-						  <li><a href="#">Dashboard</a></li>
-						  <li><a href="#">Manage Formation</a></li>
-						  <li class="active">Add formation</li>
-						</ul>
 					</div>
 
 					<!-- content -->
