--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<title>OPILUS control panel</title>
 
 		<!-- load css -->
-		<link rel="stylesheet" media="all" type="text/css" href="css/bootstrap.css" />
-		<link rel="stylesheet" media="all" type="text/css" href="css/reset.css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 		<link rel="stylesheet" media="all" type="text/css" href="css/style.css" />
 
         <!-- load fonts -->
@@ -37,7 +36,7 @@
 					<ul class="menu">
 						<li><a href="#">Help Support</a></li>
 						<li><a href="#">Settings</a></li>
-						<li class="active"><img src="images/user.jpg"/><a href="#">Mohanad Kaleia</a></li>
+						<li class="active"><img src="images/john_doe.jpg"/><a href="#">Mohanad Kaleia</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-off"></i></a></li>
 					</ul>
 				</div>
@@ -49,10 +48,14 @@
 				<nav class="col-md-3">
 					<ul>
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
+                            <span class="badge alert-info">4</span>
+                        </li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Blog</a></li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-picture"></i>Pages</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-glass"></i>Posts</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-glass"></i>Posts</a>
+                            <span class="badge alert-warning">3</span>
+                        </li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-user"></i>Users</a></li>
 					</ul>
 				</nav>
@@ -60,8 +63,8 @@
 				<div id="content" class="col-md-9 red-content">
 
 					<!-- title panel -->
-					<div id="title_panel" class="row">
-						<h3 class="col-md-5">Club Activity</h3>
+					<div id="title_panel">
+						<h3>Club Activity</h3>
 					</div>
 
 					<!-- content -->
