--- a/index.html
+++ b/index.html
@@ -127,64 +127,87 @@
 
 
                             <div class="panel panel-default">
-                              <div class="panel-heading">New orders</div>
+                              <div class="panel-heading">Employees information</div>
                               <div class="panel-body">
-                                  <!-- area chart -->
-                                  <table class="grid" width="100%">
-                                      <tr>
-                                          <th>#</th>
-                                          <th>Employee Name</th>
-                                          <th>Age</th>
-                                          <th>Salary</th>
-                                          <th>Hire date</th>
-                                          <th>Details</th>
-                                      </tr>
 
-                                      <tr>
-                                          <td align="center">1</td>
-                                          <td>Mohanad Kaleia</td>
-                                          <td>26</td>
-                                          <td>800$</td>
-                                          <td>01/08/2014</td>
-                                          <td>view</td>
-                                      </tr>
+                                  <!-- table grid view -->
+                                  <div class="grid">
+                                      <table width="100%">
+                                          <tr>
+                                              <th>#</th>
+                                              <th>Employee Name</th>
+                                              <th>Age</th>
+                                              <th>Salary</th>
+                                              <th>Hire date</th>
+                                              <th>Details</th>
+                                          </tr>
 
-                                      <tr>
-                                          <td align="center">2</td>
-                                          <td>Rami Aqqad</td>
-                                          <td>27</td>
-                                          <td>850$</td>
-                                          <td>01/01/2015</td>
-                                          <td>view</td>
-                                      </tr>
+                                          <tr>
+                                              <td align="center">1</td>
+                                              <td>Mohanad Kaleia</td>
+                                              <td>26</td>
+                                              <td>800$</td>
+                                              <td>01/08/2014</td>
+                                              <td align="center">
+                                                  <a title="view" class="btn btn-default btn-xs" href="#">
+                                                    <i class="glyphicon glyphicon-file"></i>
+                                                  </a>
+                                              </td>
+                                          </tr>
 
-                                      <tr>
-                                          <td align="center">3</td>
-                                          <td>Mohanad Kaleia</td>
-                                          <td>26</td>
-                                          <td>800$</td>
-                                          <td>01/08/2014</td>
-                                          <td>view</td>
-                                      </tr>
+                                          <tr>
+                                              <td align="center">2</td>
+                                              <td>Rami Aqqad</td>
+                                              <td>27</td>
+                                              <td>850$</td>
+                                              <td>01/01/2015</td>
+                                              <td align="center">
+                                                  <a title="view" class="btn btn-default btn-xs" href="#">
+                                                    <i class="glyphicon glyphicon-file"></i>
+                                                  </a>
+                                              </td>
+                                          </tr>
 
-                                      <tr>
-                                          <td align="center">4</td>
-                                          <td>Jone Doe</td>
-                                          <td>41</td>
-                                          <td>1200$</td>
-                                          <td>01/08/2014</td>
-                                          <td>view</td>
-                                      </tr>
+                                          <tr>
+                                              <td align="center">3</td>
+                                              <td>Mohanad Kaleia</td>
+                                              <td>26</td>
+                                              <td>800$</td>
+                                              <td>01/08/2014</td>
+                                              <td align="center">
+                                                  <a title="view" class="btn btn-default btn-xs" href="#">
+                                                    <i class="glyphicon glyphicon-file"></i>
+                                                  </a>
+                                              </td>
+                                          </tr>
 
-                                      <tr>
-                                          <td align="center">5</td>
-                                          <td>Mohanad Kaleia</td>
-                                          <td>26</td>
-                                          <td>800$</td>
-                                          <td>01/08/2014</td>
-                                          <td>view</td>
-                                      </tr>
-                                  </table>
+                                          <tr>
+                                              <td align="center">4</td>
+                                              <td>Jone Doe</td>
+                                              <td>41</td>
+                                              <td>1200$</td>
+                                              <td>01/08/2014</td>
+                                              <td align="center">
+                                                  <a title="view" class="btn btn-default btn-xs" href="#">
+                                                    <i class="glyphicon glyphicon-file"></i>
+                                                  </a>
+                                              </td>
+                                          </tr>
+
+                                          <tr>
+                                              <td align="center">5</td>
+                                              <td>Mohanad Kaleia</td>
+                                              <td>26</td>
+                                              <td>800$</td>
+                                              <td>01/08/2014</td>
+                                              <td align="center">
+                                                  <a title="view" class="btn btn-default btn-xs" href="#">
+                                                    <i class="glyphicon glyphicon-file"></i>
+                                                  </a>
+                                              </td>
+                                          </tr>
+                                      </table>
+                                  </div>
                               </div>
                             </div>
 
