--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 
 					<ul class="menu">
+                        <li><input type="search" class="searchBox" placeholder="Search.."/></li>
 						<li><a href="#">Help Support</a></li>
 						<li><a href="#">Settings</a></li>
 						<li class="active"><img src="images/john_doe.jpg"/><a href="#">Mohanad Kaleia</a></li>
