--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 						<li class=""><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Blog</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-picture"></i>Pages</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-glass"></i>Posts</a>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
+						<li class=""><a href="#"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
                             <span class="badge alert-warning">3</span>
                         </li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-user"></i>Users</a></li>
