Add dependency schedule scripts

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 	</head>
 
 	<body>
-
-
 			<header>
 				<div id="index_menu">
 
@@ -59,7 +57,7 @@
 				<nav class="col-md-3">
 					<ul>
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
+						<li class=""><a href="schedule.html"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
