--- a/schedule.html
+++ b/schedule.html
@@ -137,7 +137,7 @@
 				<nav class="col-md-3">
 					<ul>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class="active"><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
+						<li class="active"><a href="index.html"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
