--- a/schedule.html
+++ b/schedule.html
@@ -136,8 +136,8 @@
 			<div id="main" class="row">
 				<nav class="col-md-3">
 					<ul>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class="active"><a href="index.html"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
+						<li class=""><a href="index.html"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
+						<li class="active"><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
@@ -160,7 +160,7 @@
 					<div>
 
                         <p>
-                            To schecule your events we chose <b>FullCalendar</b> which is a jQuery plugin that provides a full-sized, drag & drop calendar like the one below. It uses AJAX to fetch events on-the-fly for each month and is easily configured to use your own feed format (an extension is provided for Google Calendar). It is visually customizable and exposes hooks for user-triggered events (like clicking or dragging an event)
+                            To schecule your events we chose <a target="_blank" href="http://fullcalendar.io">FullCalendar</a> which is a jQuery plugin that provides a full-sized, drag & drop calendar like the one below. It uses AJAX to fetch events on-the-fly for each month and is easily configured to use your own feed format (an extension is provided for Google Calendar). It is visually customizable and exposes hooks for user-triggered events (like clicking or dragging an event)
                         </p>
 
                         <hr/>
