--- a/charts.html
+++ b/charts.html
@@ -80,7 +80,8 @@
 					<div>
 
                         <p>
-                            To schecule your events we chose <a target="_blank" href="http://fullcalendar.io">FullCalendar</a> which is a jQuery plugin that provides a full-sized, drag & drop calendar like the one below. It uses AJAX to fetch events on-the-fly for each month and is easily configured to use your own feed format (an extension is provided for Google Calendar). It is visually customizable and exposes hooks for user-triggered events (like clicking or dragging an event)
+                            Making good-looking graphs shouldn't be hard. <a target="_blank" href="http://fullcalendar.io">Morris.js</a> is a lightweight library that uses <b>jQuery</b> and <b>Raphaël</b> to make drawing simple charts easy.
+
                         </p>
 
                         <hr/>
