--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 				<nav class="col-md-3">
 					<ul>
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class=""><a href="schedule.html"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
+						<li class=""><a href="schedule.html"chart><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
+						<li class=""><a href="charts.html"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
                             <span class="badge alert-warning">3</span>
