--- a/charts.html
+++ b/charts.html
@@ -61,7 +61,7 @@
                             <span class="badge alert-info">4</span>
                         </li>
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
+						<li class=""><a href="tables.html"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
 						<li class=""><a href="#"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
                             <span class="badge alert-warning">3</span>
                         </li>
