--- a/tables.html
+++ b/tables.html
@@ -80,7 +80,7 @@
 					<div>
 
                         <p>
-                            You can create a good looking tables with or without pagiation bar for big datatables, with grid.css you only have to add <b>grid</b> class to your table.
+                            You can create a good looking tables with or without control bar for big datatables, with grid.css you only have to add <b>grid</b> class to your table.
                         </p>
 
                         <div class="panel panel-default">
@@ -193,32 +193,6 @@
 			<footer>
 				Copyright to <a href="http://www.computech-sy.com">CompuTech Group</a>
 			</footer>
-
-
-
-        <script>
-
-
-
-       Morris.Area({
-          element: 'area-example',
-          data: [
-            { y: '2006', a: 25, b: 10 },
-            { y: '2007', a: 50,  b: 40 },
-            { y: '2008', a: 55,  b: 40 },
-            { y: '2009', a: 75,  b: 65 },
-            { y: '2010', a: 50,  b: 40 },
-            { y: '2011', a: 75,  b: 65 },
-            { y: '2012', a: 100, b: 90 }
-          ],
-          xkey: 'y',
-          ykeys: ['a', 'b'],
-          labels: ['Series A', 'Series B'],
-          resize: true
-
-        });
-
-	</script>
 
 	</body>
 
