Change copy rights sign

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 			</div>
 
 			<footer>
-				Copyright to <a href="http://www.computech-sy.com">CompuTech Group</a>
+				Copyright to <a href="http://www.mycodee.com">MyCodee</a>
 			</footer>
 
 
