Change "copyright" to "designed by"

--- a/schedule.html
+++ b/schedule.html
@@ -170,7 +170,7 @@
 			</div>
 
 			<footer>
-				Copyright to <a href="http://www.mycodee.com">MyCodee</a>
+				Designed by <a href="http://www.mycodee.com">MyCodee</a>
 			</footer>
 
 	</body>
