--- a/tables.html
+++ b/tables.html
@@ -236,7 +236,7 @@
 			</div>
 
 			<footer>
-				Copyright to <a href="http://www.mycodee.com">MyCodee</a>
+				Designed by <a href="http://www.mycodee.com">MyCodee</a>
 			</footer>
 
 	</body>
