--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                          <h3 class="panel-title">Date Picker</h3>
                                     </div>
                                     <div class="panel-body">
-                                        <div class="input-group date" id="datePickerInline">
+                                        <div class="input-group date" id="datePickerInline" style="margin:0 auto;">
 
                                         </div>
                                     </div>
